--- a/DataAccess/NLog.config
+++ b/DataAccess/NLog.config
@@ -3,8 +3,8 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
-      throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      throwExceptions="true"
+      internalLogLevel="Off" internalLogFile="D:\logs\nlog-internal.log">
 
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
@@ -23,6 +23,12 @@
     See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
     -->
 
+    <target name="Console" xsi:type="Console" layout="${callsite} ${level} ${message} ${exception:format=type,message,StackTrace}"/>
+
+    <target xsi:type="File" name="f" fileName="D:\logs\${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=type,message,StackTrace}" />
+
+
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
@@ -32,6 +38,8 @@
 
   <rules>
     <!-- add your logging rules here -->
+    <logger name="*" minlevel="Info" writeTo="console,f" />
+
 
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
