--- a/DataAccess/packages.config
+++ b/DataAccess/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.9.2" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net452" />
