--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -5,26 +5,27 @@
     <!--
     <add key="SourceSiteHost" value="https://caesarsportal.sharepoint.com" />
     <add key="SourceUserName" value="vmunagala@caesarsportal.onmicrosoft.com" />
-    <add key="SourcePassword" value="Mun@g@l@0117" />
+    <add key="SourcePassword" value="****" />
     <add key="SourceSiteType" value="SharePointOnline" />
     -->
-    <add key="SourceSiteHost" value="http://win2008r2sp1" />
-    <add key="SourceUserName" value="Win2008R2SP1\vamsi.munagala" />
-    <add key="SourcePassword" value="Mun@g@l@1984" />
-    <add key="SourceSiteType" value="WSS" />
+    <add key="SourceSiteHost" value="http://smartgrid" />
+    <add key="SourceUserName" value="OGE\spmigsvc" />
+    <add key="SourcePassword" value="SPmig$vc11@j9" />
+    <add key="SourceSiteType" value="WSS" />    
     
-    <add key="TargetSiteHost" value="https://caesars365.sharepoint.com" />
-    <add key="TargetUserName" value="vamsi.munagala@caesars365.onmicrosoft.com" />
-    <add key="TargetPassword" value="Mun@g@l@1984" />
-    <add key="TargetSiteType" value="SharePointOnline" />
+    <add key="TargetSiteHost" value="http://togethernet2/sites/smartgrid" />
+    <add key="TargetUserName" value="OGE\spmigsvc" />
+    <add key="TargetPassword" value="SPmig$vc11@j9" />
+    <add key="TargetSiteType" value="SharePointOnPremises" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
     <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
-    <add key="SiteRelativeUrls" value="/" />
+    <add key="SiteRelativeUrls" value="/SGI/GI" />
     <!--"../../UserMapping.csv"-->
-    <add key="UserMappingFilePath" value="../../UserMapping.csv" />
+    <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
+    <add key="UserMappingFilePath" value="" />
     
-    <add key="LogDirectory" value="C:\temp" />
+    <add key="LogDirectory" value="D:\Logs" />
   </appSettings>
   
     <startup> 
