--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -8,19 +8,19 @@
     <add key="SourcePassword" value="****" />
     <add key="SourceSiteType" value="SharePointOnline" />
     -->
-    <add key="SourceSiteHost" value="http://togethernet/SiteDirectory/cf" />
+    <add key="SourceSiteHost" value="http://togethernet/SiteDirectory/IP/InfoSecu" />
     <add key="SourceUserName" value="OGE\spmigsvc" />
     <add key="SourcePassword" value="SPmig$vc11@j9" />
     <add key="SourceSiteType" value="WSS" />    
     
-    <add key="TargetSiteHost" value="http://togethernet2/sites/cf" />
+    <add key="TargetSiteHost" value="http://togethernet2/sites/security/InfoSecu" />
     <add key="TargetUserName" value="OGE\spmigsvc" />
     <add key="TargetPassword" value="SPmig$vc11@j9" />
     <add key="TargetSiteType" value="SharePointOnPremises" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
     <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
-    <add key="SiteRelativeUrls" value="/" />
+    <add key="SiteRelativeUrls" value="/INFOSECU Staff Meeting" />
     <!--"../../UserMapping.csv"-->
     <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
     <add key="UserMappingFilePath" value="" />
