--- a/Controller/packages.config
+++ b/Controller/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.3" targetFramework="net452" />
-  <package id="CsvHelper" version="7.1.0" targetFramework="net452" />
-  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.7521.1200" targetFramework="net452" />
+  <package id="CsvHelper" version="12.1.2" targetFramework="net452" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.8412.1200" targetFramework="net452" />
   <package id="NLog" version="4.5.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.5.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.5.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="Unity" version="5.8.5" targetFramework="net452" />
 </packages>
