--- a/DataAccess/packages.config
+++ b/DataAccess/packages.config
@@ -1,28 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.9.2" targetFramework="net452" />
-  <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net452" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net452" />
-  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net452" />
-  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net452" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.3" targetFramework="net452" />
-  <package id="Microsoft.Graph" version="1.3.0" targetFramework="net452" />
-  <package id="Microsoft.Graph.Core" version="1.4.0" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.Graph" version="1.9.0" targetFramework="net452" />
+  <package id="Microsoft.Graph.Core" version="1.9.0" targetFramework="net452" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net452" />
-  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.7521.1200" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.8412.1200" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="NLog" version="4.5.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.5.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.5.2" targetFramework="net452" />
   <package id="Polly-Signed" version="5.9.0" targetFramework="net452" />
-  <package id="SharePointPnP.IdentityModel.Extensions" version="1.2.3" targetFramework="net452" />
-  <package id="SharePointPnPCoreOnline" version="2.25.1804.1" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.1" targetFramework="net452" />
-  <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
+  <package id="SharePointPnP.IdentityModel.Extensions" version="1.2.4" targetFramework="net452" />
+  <package id="SharePointPnPCoreOnline" version="3.5.1901" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net452" />
 </packages>
