--- a/Models/packages.config
+++ b/Models/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="7.1.0" targetFramework="net452" />
+  <package id="CsvHelper" version="12.1.2" targetFramework="net452" />
   <package id="NLog" version="4.5.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.5.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
