Fixed WebPat issue. Fixed retrieving Views. Cleaned up the logic to get target relative file URL.

--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -8,24 +8,24 @@
     <add key="SourcePassword" value="****" />
     <add key="SourceSiteType" value="SharePointOnline" />
     -->
-    <add key="SourceSiteHost" value="http://togethernet/SiteDirectory/IP/InfoSecu" />
-    <add key="SourceUserName" value="OGE\spmigsvc" />
-    <add key="SourcePassword" value="SPmig$vc11@j9" />
-    <add key="SourceSiteType" value="WSS" />    
+    <add key="SourceSiteHost" value="https://sites.sp.kp.org/teams/sps" />
+    <add key="SourceUserName" value="CS\***" />
+    <add key="SourcePassword" value="***" />
+    <add key="SourceSiteType" value="SharePointOnPremises" />    
     
-    <add key="TargetSiteHost" value="http://togethernet2/sites/security/InfoSecu" />
-    <add key="TargetUserName" value="OGE\spmigsvc" />
-    <add key="TargetPassword" value="SPmig$vc11@j9" />
-    <add key="TargetSiteType" value="SharePointOnPremises" />
+    <add key="TargetSiteHost" value="https://sp-cloud.kp.org/sites/teams-sps" />
+    <add key="TargetUserName" value="***@kaiserpermanente.onmicrosoft.com" />
+    <add key="TargetPassword" value="***" />
+    <add key="TargetSiteType" value="SharePointOnline" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
     <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
-    <add key="SiteRelativeUrls" value="/INFOSECU Staff Meeting" />
+    <add key="SiteRelativeUrls" value="/" />
     <!--"../../UserMapping.csv"-->
     <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
     <add key="UserMappingFilePath" value="" />
     
-    <add key="LogDirectory" value="D:\Logs" />
+    <add key="LogDirectory" value="C:\Logs" />
   </appSettings>
   
     <startup> 
