--- a/SiteValidation/NLog.config
+++ b/SiteValidation/NLog.config
@@ -25,7 +25,7 @@
 
     <target name="Console" xsi:type="Console" layout="${longdate} ${callsite} ${level} ${message} ${exception:format=type,message,StackTrace}"/>
 
-    <target xsi:type="File" name="f" fileName="D:\logs\${shortdate}.log"
+    <target xsi:type="File" name="f" fileName="C:\logs\${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=type,message,StackTrace}" />
 
 
