--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -1,36 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    
-    <!--
-    <add key="SourceSiteHost" value="https://caesarsportal.sharepoint.com" />
-    <add key="SourceUserName" value="vmunagala@caesarsportal.onmicrosoft.com" />
-    <add key="SourcePassword" value="****" />
-    <add key="SourceSiteType" value="SharePointOnline" />
-    -->
-    <add key="SourceSiteHost" value="https://sites.sp.kp.org/teams/sps" />
-    <add key="SourceUserName" value="CS\***" />
-    <add key="SourcePassword" value="***" />
-    <add key="SourceSiteType" value="SharePointOnPremises" />    
-    
-    <add key="TargetSiteHost" value="https://sp-cloud.kp.org/sites/teams-sps" />
-    <add key="TargetUserName" value="***@kaiserpermanente.onmicrosoft.com" />
-    <add key="TargetPassword" value="***" />
+    <!-- SOURCE SETTINGS-->
+    <!--https://sites.sp.kp.org/projects/sps-->
+    <add key="SourceSiteHost" value="https://sites1.sp.kp.org/mssa/Medicare" />
+    <add key="SourceUserName" value="CS\SvcSPSD02Setup" />
+    <add key="SourcePassword" value="E1xz2JW5" />
+    <add key="SourceSiteType" value="SharePointOnPremises" />
+
+    <!-- TARGET SETTINGS-->
+    <!--https://sp-cloud.kp.org/sites/projects-sps -->
+    <add key="TargetSiteHost" value="https://sp-cloud.kp.org/sites/mssa-Medicare" />
+    <add key="TargetUserName" value="svcO365SPMig@kaiserpermanente.onmicrosoft.com" />
+    <add key="TargetPassword" value="72q%^XPWqyo9" />
     <add key="TargetSiteType" value="SharePointOnline" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
     <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
-    <add key="SiteRelativeUrls" value="/" />
+    <add key="SiteRelativeUrls" value="/mit" />
     <!--"../../UserMapping.csv"-->
     <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
     <add key="UserMappingFilePath" value="" />
-    
     <add key="LogDirectory" value="C:\Logs" />
   </appSettings>
-  
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
