--- a/SiteValidation/SiteValidation.csproj
+++ b/SiteValidation/SiteValidation.csproj
@@ -83,7 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FasterProgram.cs" />
+    <None Include="FasterProgram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
