--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -5,19 +5,19 @@
     <!--https://sites.sp.kp.org/projects/sps-->
     <add key="SourceSiteHost" value="https://sites1.sp.kp.org/mssa/Medicare" />
     <add key="SourceUserName" value="CS\SvcSPSD02Setup" />
-    <add key="SourcePassword" value="E1xz2JW5" />
+    <add key="SourcePassword" value="###" />
     <add key="SourceSiteType" value="SharePointOnPremises" />
 
     <!-- TARGET SETTINGS-->
     <!--https://sp-cloud.kp.org/sites/projects-sps -->
     <add key="TargetSiteHost" value="https://sp-cloud.kp.org/sites/mssa-Medicare" />
     <add key="TargetUserName" value="svcO365SPMig@kaiserpermanente.onmicrosoft.com" />
-    <add key="TargetPassword" value="72q%^XPWqyo9" />
+    <add key="TargetPassword" value="###" />
     <add key="TargetSiteType" value="SharePointOnline" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
     <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
-    <add key="SiteRelativeUrls" value="/mit" />
+    <add key="SiteRelativeUrls" value="/" />
     <!--"../../UserMapping.csv"-->
     <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
     <add key="UserMappingFilePath" value="" />
