--- a/SiteValidation/SiteValidation.csproj
+++ b/SiteValidation/SiteValidation.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ConsolidatedReport.ps1" />
     <None Include="FasterProgram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
