--- a/SiteValidation/App.config
+++ b/SiteValidation/App.config
@@ -3,20 +3,25 @@
   <appSettings>
     <!-- SOURCE SETTINGS-->
     <!--https://sites.sp.kp.org/projects/sps-->
-    <add key="SourceSiteHost" value="https://sites1.sp.kp.org/mssa/Medicare" />
-    <add key="SourceUserName" value="CS\SvcSPSD02Setup" />
-    <add key="SourcePassword" value="###" />
-    <add key="SourceSiteType" value="SharePointOnPremises" />
+    <add key="SourceSiteHost" value="https://sourcesitecollection" />
+    <add key="SourceUserName" value="domain\username" />
+    <add key="SourcePassword" value="####" />    
+    <add key="SourceSiteType" value="SharePointOnPremises" /> 
+    <!-- Values for SiteType are 
+        SharePointOnline,
+        SharePointOnPremises, //for SP 2010 and above
+        WSS //  for SP 2007 version or below
+    -->
 
     <!-- TARGET SETTINGS-->
     <!--https://sp-cloud.kp.org/sites/projects-sps -->
-    <add key="TargetSiteHost" value="https://sp-cloud.kp.org/sites/mssa-Medicare" />
-    <add key="TargetUserName" value="svcO365SPMig@kaiserpermanente.onmicrosoft.com" />
+    <add key="TargetSiteHost" value="https://targetsitecollection" />
+    <add key="TargetUserName" value="globaladmin@tenant.onmicrosoft.com" />
     <add key="TargetPassword" value="###" />
     <add key="TargetSiteType" value="SharePointOnline" />
 
     <!-- Ctrl +9 in the excel after entering this formula =TRANSPOSE(A1:A50)&";"-->
-    <!-- <add key="SiteRelativeUrls" value="/sites/IT_PMO;/sites/IT_Digitization" /> -->
+    <!-- <add key="SiteRelativeUrls" value="/subweb1;/subweb2" /> -->
     <add key="SiteRelativeUrls" value="/" />
     <!--"../../UserMapping.csv"-->
     <!--<add key="UserMappingFilePath" value="../../UserMapping.csv" />-->
